fix: logo botton spacing

--- a/src/components/MultiStepForm.module.css
+++ b/src/components/MultiStepForm.module.css
@@ -10,7 +10,7 @@
 .logoContainer {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .logo {
